--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - wget https://github.com/erlang/rebar3/releases/download/3.14.1/rebar3
   - chmod +x rebar3
 script:
-  - ./rebar3
+  - ./rebar3 xref
 cache:
   directories:
     - _build
