--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - chmod +x rebar3
 script:
   - ./rebar3 xref
-  - /.rebar3 as dev crossref for NLP 
+  - ./rebar3 as dev compile -f test
 cache:
   directories:
     - _build
