--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,13 @@
-{profiles, [
-  {dev, [
-    {deps, [some_dev_dep]}
-  ]},
-  {test, [   
-    {deps, [some_test_dep]}
-  ]}
-]}.
+{erl_opts, [debug_info]}.
+
+{deps, [cowboy]}.
+
+{shell,
+ % {config, "config/sys.config"},
+ [{apps, [docker_ex]}]}.
+
+{relx,
+ [{release, {docker_ex, "0.0.1"}, [docker_ex]},
+  {mode, prod},
+  {dev_mode, false},
+  {include_erts, true}]}.
