--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - chmod +x rebar3
 script:
   - ./rebar3 xref
-  - ./rebar3 as prod release
+  - ./rebar3 as prod compile
 cache:
   directories:
     - _build
