--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
     packages:
       - uuid-dev
 install:
-  - wget https://github.com/erlang/rebar3/releases/download/3.14.1/rebar3
+  - curl https://github.com/erlang/rebar3/releases/download/3.14.1/rebar3
   - chmod +x rebar3
 script:
   - ./rebar3 xref
